# hybridrag

./: .gitignore  LICENSE  README.md  app.py  b2_test_results.txt  cleanup_postgres.py  create_presentation.py  debug_upload.py  dump.rdb  gunicorn.conf.py  pytest.ini  requirements.txt  test_b2_connectivity.py  test_frontend.py  test_output.txt  wsgi.py
app/: __init__.py  config.py  extensions.py
backend/: dump.rdb  main.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py
backend/app/middleware/: clerk_auth.py
backend/app/models/: __init__.py  activity_log.py  document.py  ingestion_job.py  message.py  message_evaluation.py  thread.py  upload_batch.py  user.py
backend/app/routers/: admin.py  auth.py  chat.py  documents.py  health.py  threads.py
backend/app/schemas/: chat.py  documents.py  threads.py
backend/app/services/: auth_service.py  chunking_service.py  evaluation_service.py  ingestion_service.py  rag_service.py  recommendation_service.py  reranking_service.py  storage_service.py  vector_service.py
backend/app/services/chunking/: __init__.py  semantic_splitter.py  validators.py
backend/app/services/hyde/: __init__.py  hyde_service.py
backend/app/services/metadata/: __init__.py  extractor.py  schema.py
backend/app/services/retrieval/: __init__.py  filter_builder.py  retrieval_service.py
backend/migrations/: env.py
backend/migrations/versions/: 862214c26b5f_initial.py
backend/scripts/: cleanup.py
backend/workers/: celery_app.py
backend/workers/tasks/: ingestion.py
frontend/: index.html  package-lock.json  (+2 more)
(+64 files in other folders)
