[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.14",
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "cohere>=7.0.0",
    "fastapi>=0.136.3",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "neo4j>=6.2.0",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
